--- a/WebLeave/SPA/src/app/views/leave/leave-edit-data-detail/leave-edit-data-detail.component.scss
+++ b/WebLeave/SPA/src/app/views/leave/leave-edit-data-detail/leave-edit-data-detail.component.scss
@@ -11,7 +11,5 @@ $clr-yellow: #ffc107;
   }
 .viewdatadt{
   border: 2px solid $clr-yellow;
-}
-.Cmttime{
-  margin-top: 50px !important;
+  border-radius: 5px;
 }
