--- a/WebLeave/SPA/src/app/views/leave/leave-detail/leave-detail.component.scss
+++ b/WebLeave/SPA/src/app/views/leave/leave-detail/leave-detail.component.scss
@@ -10,6 +10,7 @@ $clr-yellow: #ffc107;
   }
 .viewdatadt{
   border: 2px solid $clr-yellow;
+  border-radius: 5px;
 }
 .Cmttime{
   margin-top: 50px !important;
